# AgentTidal

./: .gitignore  CLAUDE.md  README.md  README_EN.md  config.yaml  pyproject.toml
.claude/: settings.local.json
memory/long_term/: memory.db
memory/long_term/datasets/: 2026-04-29_dataset.jsonl  2026-04-30_dataset.jsonl  2026-05-01_dataset.jsonl
memory/long_term/raw/: 2026-04-29.jsonl  2026-04-30.jsonl
memory/short_term/: 2026-05-01.jsonl
scripts/: install_task.bat  setup_env.bat  simulate_conversations.py
src/inheritance/: inheritor.py
src/long_term/: database.py
src/processor/: cleaner.py  formatter.py
src/scheduler/: nightly.py
src/short_term/: collector.py
src/training/: trainer.py
src/web/: app.py
src/web/templates/: dashboard.html
